--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,64 +1,56 @@
 <section class="Footerbg mt-5">
-    <div class="container">
-    <div class="row pt-5 pb-5">
-
-        <div class="col-lg-5 col-md-6">
-            <p class="text-white">Copyright © 2020 Nexcent ltd.</p>
-            <p class="text-white">All rights reserved</p>
-            <div class=" mt-3 ">
-                    <span class="icon m-1 d-inline-flex">
-                    <a href="#" class=" iconcolor">
-                    <i class="bx bxl-instagram fs-3 m-1 text-white"></i></a>
-                </span>
-                <span class="icon m-1 d-inline-flex">
-                    <a href="#" class=" iconcolor">
-                    <i class="bx bx-globe fs-3 m-1 text-white"></i></a>
-                </span>
-                <span class="icon m-1 d-inline-flex">
-                    <a href="#" class=" iconcolor">
-                    <i class="bx bxl-twitter fs-3 m-1 text-white"></i></a>
-                </span>
-                <span class="icon m-1 d-inline-flex">
-                    <a href="#" class=" iconcolor">
-                    <i class="bx bxl-youtube fs-3 m-1 text-white"></i></a>
-                </span>
-             </div>
+  <div class="container">
+    <div class="row pt-5 pb-5 gy-4">
+      <div class="col-lg-5 col-md-6 text-center text-md-start">
+        <p class="text-white mb-1">Copyright © 2020 Nexcent ltd.</p>
+        <p class="text-white mb-3">All rights reserved</p>
+        <div class="mt-3 d-flex justify-content-center justify-content-md-start flex-wrap">
+          <a href="#" class="iconcolor m-1">
+            <i class="bx bxl-instagram fs-3 text-white"></i>
+          </a>
+          <a href="#" class="iconcolor m-1">
+            <i class="bx bx-globe fs-3 text-white"></i>
+          </a>
+          <a href="#" class="iconcolor m-1">
+            <i class="bx bxl-twitter fs-3 text-white"></i>
+          </a>
+          <a href="#" class="iconcolor m-1">
+            <i class="bx bxl-youtube fs-3 text-white"></i>
+          </a>
         </div>
-        <div class="col-lg-7 col-md-6">
-            <div class="row">
-            <div class="col-lg-3 col-md-6 ">
-                <h4 class="text-white">Company</h4>
-                <p class="FooterPColor">About us</p>
-                <p class="FooterPColor">Blog</p>
-                <p class="FooterPColor">Contact us</p>
-                <p class="FooterPColor">Pricing</p>
-                <p class="FooterPColor">Testimonials</p>
-            </div>
+      </div>
 
-            <div class="col-lg-3 col-md-6 ">
-                <h4 class="text-white">Support</h4>
-                <p class="FooterPColor">Help center</p>
-                <p class="FooterPColor">Terms of service</p>
-                <p class="FooterPColor">Legal</p>
-                <p class="FooterPColor">Privacy policy</p>
-                <p class="FooterPColor">Status</p>
-            </div>
+      <div class="col-lg-7 col-md-6">
+        <div class="row gy-4">
+          <div class="col-md-4 col-sm-6">
+            <h5 class="text-white">Company</h5>
+            <p class="FooterPColor mb-1">About us</p>
+            <p class="FooterPColor mb-1">Blog</p>
+            <p class="FooterPColor mb-1">Contact us</p>
+            <p class="FooterPColor mb-1">Pricing</p>
+            <p class="FooterPColor mb-1">Testimonials</p>
+          </div>
 
-            <div class="col-lg-6 col-md-6">
-            <h4 class="text-white">Stay up to date</h4>
-            <div class="w-100 input-group mt-5 rounded-3">
-                <input type="email" name="email" class=" form-control w-75 py-2 px-3  border-0 justify-content-center  footerInput inputColor" type="email" name="email" placeholder="Your email address">
-                <img src="assets/images/Vector.png" class=" border-0 input-group-text footerInput" alt="arrow">
+          <div class="col-md-4 col-sm-6">
+            <h5 class="text-white">Support</h5>
+            <p class="FooterPColor mb-1">Help center</p>
+            <p class="FooterPColor mb-1">Terms of service</p>
+            <p class="FooterPColor mb-1">Legal</p>
+            <p class="FooterPColor mb-1">Privacy policy</p>
+            <p class="FooterPColor mb-1">Status</p>
+          </div>
+
+          <div class="col-md-4 col-12">
+            <h5 class="text-white">Stay up to date</h5>
+            <div class="input-group mt-3">
+              <input type="email" class="form-control py-2 px-3 border-0 footerInput inputColor" placeholder="Your email address" />
+              <span class="input-group-text border-0 footerInput">
+                <img src="assets/images/Vector.png" alt="arrow" />
+              </span>
             </div>
-            </div>
-            <div class="w-100 input-group mt-5 rounded-3">
-</div>
-            </div>
+          </div>
         </div>
-        
-
-        
-
+      </div>
     </div>
-    </div>
+  </div>
 </section>
