--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,45 +1,42 @@
 <section class="container-fluid">
-    <div class="row ">
-        <div class="col-7  d-flex justify-content-center align-items-center mb-5 pb-5">
-            <div class="w-75">
-            <h3>Welcome Back 👋</h3>
-            <p class="pLogiColor">Kindly fill in your details below to sign in your account</p>
-            <!-- <div class="alert alert-danger">{{error}}</div> -->
-            <form (ngSubmit)="loginFormSubmit(loginForm)" [formGroup]="loginForm" >
-                <label for="email" class="mb-3 labelColor">Email Address</label>
-                <input formControlName="email" class="form-control p-3  mb-3 ramadiColor bg-white" type="email" name="email" id="email" placeholder="Pleas enter your email">
+  <div class="row min-vh-100">
+    <div class="col-12 col-md-7 d-flex justify-content-center align-items-center p-4 mb-5 pb-5">
+      <div class="w-100" style="max-width: 500px">
+        <h3>Welcome Back 👋</h3>
+        <p class="pLogiColor">Kindly fill in your details below to sign in your account</p>
 
-                <div *ngIf="loginForm.get('email')?.errors && loginForm.get('email')?.touched" class="alert alert-danger p-1">
-                    <p class="m-0"  *ngIf="loginForm.get('email')?.getError('required')">email is required</p>
-                    <p class="m-0"  *ngIf="loginForm.get('email')?.getError('email')">email format invalid</p>
-                </div>
+        <form (ngSubmit)="loginFormSubmit(loginForm)" [formGroup]="loginForm">
+          <label for="email" class="mb-3 labelColor">Email Address</label>
+          <input formControlName="email" class="form-control p-3 mb-3 ramadiColor bg-white" type="email" name="email" id="email" placeholder="Please enter your email" />
 
-                <label for="password" class="mb-3 labelColor">Password</label>
-                <input formControlName="password" class="form-control p-3 mb-3"  name="password" id="password" placeholder="Pleas enter your email">
-                
-                <div *ngIf="loginForm.get('password')?.errors && loginForm.get('password')?.touched" class="alert alert-danger p-1">
-                    <p class="m-0"  *ngIf="loginForm.get('password')?.getError('required')">password is required</p>
-                    <p class="m-0"  *ngIf="loginForm.get('password')?.getError('pattern')">password must start with uppercase</p>
-                </div>
-                
-                <button [disabled]="loginForm.invalid" class="btn w-100 bluecolorbg fw-medium mb-3" type="submit">
-                   <span *ngIf="!isLoading"> Sign in </span>
-                   <i *ngIf="isLoading" class="fas fa-spinner fa-spin"></i>
-                </button>
-                
-                <p class="d-flex  justify-content-center align-items-center">Don’t have an account?  <a class="bluecolor fw-medium"> &nbsp;Sign up</a></p>
-            
-            </form>
-        </div>
-            <!-- <label for="email">Email Address</label>
-            <input type="text" name="email" id="email" placeholder="Pleas enter your email">
-            <label for="email">Password</label>
-            <input type="text" name="email" id="email" placeholder="Please enter your password">
-            <button class="btn bluecolorbg fw-bold" type="button">Sign in</button>
-            <p>Don’t have an account? <a class="bluecolor fw-medium">Sign up</a></p> -->
-        </div>
-        <div class="col-5 d-none d-md-block p-0 vh-100 ">
-            <img src="assets/images/ContentContainer.png" alt="ContentContainer" class="w-100 h-100 object-fit-fill ">
-        </div>
+          <div *ngIf="loginForm.get('email')?.errors && loginForm.get('email')?.touched" class="alert alert-danger p-1">
+            <p class="m-0" *ngIf="loginForm.get('email')?.getError('required')">email is required</p>
+            <p class="m-0" *ngIf="loginForm.get('email')?.getError('email')">email format invalid</p>
+          </div>
+
+          <label for="password" class="mb-3 labelColor">Password</label>
+          <input formControlName="password" class="form-control p-3 mb-3" name="password" id="password" placeholder="Please enter your password" />
+
+          <div *ngIf="loginForm.get('password')?.errors && loginForm.get('password')?.touched" class="alert alert-danger p-1">
+            <p class="m-0" *ngIf="loginForm.get('password')?.getError('required')">password is required</p>
+            <p class="m-0" *ngIf="loginForm.get('password')?.getError('pattern')">password must start with uppercase</p>
+          </div>
+
+          <button [disabled]="loginForm.invalid" class="btn w-100 bluecolorbg fw-medium mb-3" type="submit">
+            <span *ngIf="!isLoading">Sign in</span>
+            <i *ngIf="isLoading" class="fas fa-spinner fa-spin"></i>
+          </button>
+
+          <p class="text-center">
+            Don’t have an account?
+            <a class="bluecolor fw-medium" href="#"> &nbsp;Sign up</a>
+          </p>
+        </form>
+      </div>
     </div>
+
+    <div class="col-md-5 d-none d-md-block p-0">
+      <img src="assets/images/ContentContainer.png" alt="ContentContainer" class="w-100 h-100" style="object-fit: cover" />
+    </div>
+  </div>
 </section>
