--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse " >
             <ul class="navbar-nav ms-auto ">
             <li class="nav-item active">
-                <a class="nav-link ramadiColor" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link ramadiColor" routerLink="home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link ramadiColor" href="#">Services <span class="sr-only">(current)</span></a>
@@ -21,7 +21,7 @@
             </li>
             </ul>
            <div class="ms-auto">
-            <button class="btn bluecolorbg fw-bold me-3" type="button">Login</button>
+            <button class="btn bluecolorbg fw-bold me-3" type="button" routerLink="login">Login</button>
             <button class="btn bluecolorbg fw-bold" type="button">Sign up</button>
           </div>
         </div>
